# homecockpit-software

./: .gitignore  .gitmodules  README.md  README_EN.md  homecockpit.py
additions/FFA320Connector/: custom.cfg  readme.txt
additions/lua-scripts/: readme.txt  synca320commdata.lua
cppsoftware/: CMakeLists.txt  rpihaltest.cpp
cppsoftware/hal/inc/: rpigpio.h
cppsoftware/hal/src/: rpigpio.cpp
cppsoftware/rpihw/: CMakeLists.txt
cppsoftware/rpihw/gpio/inc/: rpigpio.h
cppsoftware/rpihw/gpio/src/: rpigpio.cpp
cppsoftware/rpihw/i2c/: CMakeLists.txt
cppsoftware/rpihw/i2c/inc/: rpii2c.h
cppsoftware/rpihw/inc/: rpigpio.h
cppsoftware/rpihw/src/: rpigpio.cpp
hardware/: hardwarehandler.py
network/: datahandler.py  datatypes.py
pysoftware/: homecockpit.py
pysoftware/hardware/: hardwarehandler.py
pysoftware/hardware/charlcd/: characterlcd.py
